--- a/TCGplayerUI/TCGplayerUI.csproj
+++ b/TCGplayerUI/TCGplayerUI.csproj
@@ -7,14 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Files\**" />
+    <Compile Remove="Data\Kiosk\**" />
     <Compile Remove="Logs\**" />
     <Compile Remove="PageObjects\CSI\**" />
     <Compile Remove="Reports1\**" />
     <Compile Remove="Results\**" />
+    <EmbeddedResource Remove="Data\Files\**" />
+    <EmbeddedResource Remove="Data\Kiosk\**" />
     <EmbeddedResource Remove="Logs\**" />
     <EmbeddedResource Remove="PageObjects\CSI\**" />
     <EmbeddedResource Remove="Reports1\**" />
     <EmbeddedResource Remove="Results\**" />
+    <None Remove="Data\Files\**" />
+    <None Remove="Data\Kiosk\**" />
     <None Remove="Logs\**" />
     <None Remove="PageObjects\CSI\**" />
     <None Remove="Reports1\**" />
@@ -44,7 +50,7 @@
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="101.0.4951.4100" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="103.0.5060.5300" />
     <PackageReference Include="Titanium.Web.Proxy" Version="3.1.1344" />
   </ItemGroup>
 
@@ -53,8 +59,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Files\Buylist\" />
-    <Folder Include="Data\Kiosk\" />
     <Folder Include="TestSetUp\" />
   </ItemGroup>
 </Project>
